KSENROLL-3583.  Code cleanup based on FindBugs errors.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@39124 0ac02d80-fb3f-11dc-a574-c57244a850eb